--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+// server:
+// servlet:
+ //	context-path: /produdoro/api
+ 	
+spring:
+	data:
+		mongodb:
+		authentication-database: admin
+		auto-index-creation: true
+		uri: $(MONGO_DB_URI:mongodb+srv://ronanlima:bSEAQbjWu8yEsV75@wakanda.0uvq79j.mongodb.net/?retryWrites=true&w=majority)
+		
+		
